trabalhando com seções e imagens

--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -8,12 +8,47 @@
 </head>
 
 <body>
-	<p>Minha página</p>
+	<nav>
+		<p>Minha página</p>
+		<ul>
+			<li>Serviços</li>
+			<li>Clientes</li>
+			<li>Parceiros</li>
+			<li>Time</li>
+			<li>Contato</li>
+		</ul>
+	</nav>
 
 	<header>
 		<h1>Minha primeira página</h1>
-		<p>Oferecemos o desenvolviemtno dos melhores sites e apps para sua empresa.</p>
+		<p><p>Oferecemos o desenvolviemtno dos melhores sites e apps para sua empresa.</p>
 	</header>
+
+	<section id="servicos">
+		<h2>SERVIÇOS</h2>
+		<P>Oferecemos os melhores serviços</P>
+		<img src="img/servico.jpg" width="500px">
+	</section>
+	<section id="clientes">
+		<h2>CLIENTES</h2>
+		<P>Espaço do cliente</P>
+		<img src="img/clientes.jpg" width="500px">
+	</section>
+	<section id="parceiros">
+		<h2>PARCEIROS</h2>
+		<P>Espaço para os parceiros</P>
+		<img src="img/parceiro.jpg" width="500px">
+	</section>
+	<section id="time">
+		<h2>TIME</h2>
+		<P>Espaço para nosso time</P>
+		<img src="img/time.jpg" width="500px">
+	</section>
+	<section id="contato">
+		<h2>CONTATO</h2>
+		<P>Contato</P>
+		<img src="img/site.jpg" width="500px">
+	</section>
 
 	<footer>
 		<p>Desenvolvido por Luiz Menezes</p>
